[package]
authors = ['Konomi Dev']
description = 'FRAME pallet for swap'
edition = '2018'
license = 'Unlicense'
name = 'pallet-assets'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

## alias "parity-scale-code" to "codec"
#[dependencies.codec]
#default-features = false
#features = ['derive']
#package = 'parity-scale-codec'
#version = '1.3.4'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = "1.0.119", optional = true }
sp-core = { version = "3.0.0", default-features = false }
#sp-io = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }

sp-runtime = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }

traits = { path = '../traits', default-features = false, version = '2.0.1'}

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-core/std',
    'sp-runtime/std',
    'traits/std',
    'serde',
]
