[package]
authors = ['Konomi Dev']
description = 'FRAME pallet for swap'
edition = '2018'
license = 'Unlicense'
name = 'pallet-swap'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
serde = { version = "1.0.119", optional = true }
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
sp-std = { default-features = false, version = '2.0.1' }
sp-core = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }
pallet-assets = { path = '../assets', default-features = false, version = '2.0.1' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-core/std',
    'sp-runtime/std',
    'serde',
]
