[package]
authors = ['Konomi Dev']
description = 'traits in runtime'
edition = '2018'
license = 'Unlicense'
name = 'traits'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
sp-std = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'sp-std/std',
]