[package]
name = "pallet-swap-rpc"
version = "0.8.1"
authors = ["Konomi team"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/paritytech/substrate/"
description = "Node-specific RPC methods for interaction with swap."
readme = "README.md"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
jsonrpc-core = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-derive = "15.1.0"
sp-blockchain = "3.0.0"
sp-rpc = "3.0.0"
serde = { version = "1.0.119", features = ["derive"] }
sp-runtime = "3.0.0"
sp-api = "3.0.0"
pallet-swap-rpc-runtime-api = { version = "0.8.1", path = "./runtime-api" }

[dev-dependencies]
serde_json = "1.0.41"
